[metadata]
name = Sentinel Timeseries
author =
    Niels van der Vegt (@Shmuppel)
    Sotiris Kechagias (@MasterHydro)
    Soria van Uffelen (@SoriavU)
    Witte Verheul (@Wittedewit)
    Fenna van Tillo (@Fen100)
maintainer = Niels van der Vegt (@Shmuppel)
status = Development
version = 0
url = 'https://github.com/Shmuppel/pooling-detection'

[options]
install_requires =
    python-dotenv == 0.20.0
    sentinelsat == 1.1.1
    numpy == 1.22.4
    geopandas == 0.10.2
    Shapely == 1.8.2
    rasterio == 1.2.10
    rasterstats == 0.16.0
    GDAL == 3.5.0
packages = find:
python_requires = >=3.9
include_package_data = True

[options.extras_require]
examples =
    jupyter == 1.0.0
